policies/procmount-initcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-procmount-initcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.securityContext) ||
          !has(ic.securityContext.procMount) ||
          ic.securityContext.procMount == "Default"
        )
      message: >
        spec.initContainers[*].securityContext.procMount must be undefined or "Default".
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optout-warn
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/procmount-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optin-warn
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: procmount-initcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optout-audit
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/procmount-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optin-audit
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: procmount-initcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optout-deny
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/procmount-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-procmount-initcontainers-namespace-optin-deny
spec:
  policyName: check-procmount-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: procmount-initcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
